<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        />

    <item android:id="@+id/nav_notification"
        android:title="@string/notification"
        android:icon="@drawable/ic_notification"
        />

    <item android:id="@+id/nav_favorite"
        android:title="@string/favorite"
        android:icon="@drawable/ic_favorite"
        />

    <item android:id="@+id/nav_review"
        android:title="@string/review"
        android:icon="@drawable/ic_review"
        />

    <item android:id="@+id/nav_settings"
        android:title="@string/settings"
        android:icon="@drawable/settings"
        />

    <item android:id="@+id/nav_logout"
        android:title="@string/logout"
        android:icon="@drawable/logout_2"
        />
</menu>