<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="10dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.Guideline
                android:id="@+id/guideline_left"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/img_origin"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_dot_circle"
                app:layout_constraintBottom_toTopOf="@id/img_connect"
                app:layout_constraintEnd_toStartOf="@id/guideline_left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintVertical_bias="0.5"/>

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/img_connect"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_more_vertical"
                android:layout_marginTop="4dp"
                app:layout_constraintBottom_toTopOf="@id/img_destination"
                app:layout_constraintEnd_toStartOf="@id/guideline_left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_origin" />

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/img_destination"
                android:src="@drawable/ic_origin_filled"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline_left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_connect" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edit_origin"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:hint="@string/edit_origin"
                app:layout_constraintBottom_toTopOf="@id/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline_left"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                style="@style/Divider"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toTopOf="@id/edit_destination"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/edit_origin"/>

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:id="@+id/edit_destination"
                android:hint="@string/edit_destination"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="32dp"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/divider" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnCancel"
                style="@style/RoundedButton"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:text="@string/btn_cancel"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnFind"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.9"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnFind"
                style="@style/RoundedButton"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:text="@string/btn_find"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnCancel"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.9" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mapView"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.minhquan.besttrip.route.RouteFragment"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:src="@drawable/ic_origin_filled"
        app:backgroundTint="@color/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintVertical_bias="1"/>


</android.support.constraint.ConstraintLayout>

